# adept_ai

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
src/: test.py
src/adept_ai/: tool.py
src/adept_ai/capabilities/: __init__.py  base.py  composio.py  function.py
src/adept_ai/capabilities/mcp/: main.py
src/adept_ai/compat/: pydantic_ai.py
src/dev_ai/: agent.py  agent_builder.py  cli.py  commands.py  langchain.py  llm.py  prompt_template.md  pydantic_ai.py  run.py  tool.py  tools.py  utils.py
src/dev_ai/capabilities/: __init__.py  base.py  filesystem.py  mcp.py
src/dev_ai/capabilities/filesystem/: directory_tree.py  main.py
src/dev_ai/capabilities/mcp/: __init__.py  base.py  client_session.py  lifecycle_manager.py  main.py  stdio.py
src/dev_ai/compat/: langchain.py  openai.py  pydantic_ai.py
src/dev_ai/framework/: agent_builder.py  prompt_template.md  pydantic_ai.py  tool.py
src/dev_ai/framework/capabilities/: __init__.py  base.py  filesystem.py  mcp.py
src/examples/: agent_builder.py  cli.py
src/examples/langchain/: run.py
src/examples/openai/: run.py
src/examples/pydantic_ai/: llm.py  run.py  tools.py
tests/compat/: test_openai.py  test_pydantic_ai.py
tests/framework/: test_pydantic_ai.py
