[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev_ai"
version = "0.1.0"
description = "A short description of your project"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "pydantic",
    "pydantic-ai-slim[logfire]>=0.1.9",
    "rich",
    "python-dotenv",
    "aiofiles",
    "jinja2>=3.1.6",
    "decorator>=5.2.1",
    "mcp[cli]>=1.7.1",
]

[project.scripts]
dev = "dev_ai.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pyright", "pytest-asyncio>=0.26.0"]
langchain = ["langchain>=0.3.25", "langgraph>=0.4.1", "langchain-google-genai>=2.1.4"]
openai = ["openai>=1.0.0"]
pydantic_ai = ["pydantic-ai[logfire]>=0.1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Darwin"

[[tool.uv.index]]
url = "https://pypi-256045177368.d.codeartifact.eu-west-1.amazonaws.com/pypi/pypi/simple/"
default = true
